--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,15 @@
 .App-header {
-  background-color: #222;
+  background-color: teal;
   padding-bottom: 0.5rem;
   color: white;
   position: fixed;
   width: 100%;
+  font-family: 'Abel', sans-serif;
 }
 
 .App-title {
   text-align: center;
-  font-size: 1.5em;
+  font-size: 2em;
 }
 
 .App-main {
