--- a/src/components/TimelineEvent.css
+++ b/src/components/TimelineEvent.css
@@ -3,7 +3,7 @@
   grid-template: 2rem auto 2rem / 1fr 1fr;
   padding: 0.5rem;
   border-bottom: 1px solid #E6ECF0;
-  background-color: #FFF;
+  background-color: lightgray;
 }
 
 .timeline-event:hover {
