--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,10 @@
   padding-top: 7rem;
   background-color: #E6ECF0;
 }
+
+ul {
+  list-style-type: none;
+  padding-left: 0;
+  margin-right: 10vw;
+  margin-left: 10vw;
+}
