--- a/src/components/TimelineEvent.css
+++ b/src/components/TimelineEvent.css
@@ -14,10 +14,12 @@
   grid-area: 1 / 1 / span 1 / span 1;
   margin-top: 0.5rem;
   font-weight: bolder;
+  overflow: auto;
 }
 
 .event-status {
   grid-area: 2 / 1 / span 1 / -1;
+  word-break: break-word;
 }
 
 .event-time {
