--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,39 @@
 
 .App-title {
   text-align: center;
-  font-size: 1.5em;
+  font-size: 2.5em;
 }
 
 .App-main {
   padding-top: 7rem;
+  background-color: rgb(175, 221, 240);
+}
+
+.singlePost {
   background-color: #E6ECF0;
+  margin: 1em;
+  padding: 2em;
+}
+
+.topLine {
+  display: grid;
+  margin-bottom: 1em;;
+  grid-template-columns: 1fr 1fr;
+}
+
+.topLine * {
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.person {
+
+}
+
+.timeStamp {
+  text-align: right;
+}
+
+.status {
+
 }
