--- a/src/App.css
+++ b/src/App.css
@@ -14,4 +14,27 @@
 .App-main {
   padding-top: 7rem;
   background-color: #E6ECF0;
+  padding: 5rem;
 }
+
+li {
+  list-style: none;
+}
+
+/* .top {
+  font-weight: bold;
+}
+
+.post {
+  background-color: white;
+  padding: 2rem;
+}
+
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
+} */
