why did i try to style this myself there were styles provided

--- a/src/components/TimelineEvent.css
+++ b/src/components/TimelineEvent.css
@@ -4,6 +4,7 @@
   padding: 0.5rem;
   border-bottom: 1px solid #E6ECF0;
   background-color: #FFF;
+  margin-right: 3rem;
 }
 
 .timeline-event:hover {
@@ -24,4 +25,8 @@
   grid-area: 1 / 2 / span 1 / span 1;
   margin-top: 0.5rem;
   text-align: right;
+}
+
+ul{
+  list-style-type: none;
 }
