--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 3fr;
   direction: rtl;
+  margin-top: 0.5rem;
 }
 
 .emoji {
@@ -56,6 +57,6 @@
 }
 
 .emoji_with_counter {
-  background-color: aquamarine;
+  background-color: lightgreen;
   display: flex;
 }
