--- a/src/App.css
+++ b/src/App.css
@@ -47,16 +47,24 @@
 
 .emojis_parent_container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 3fr;
-  direction: rtl;
+  grid-template-columns: 4fr 1fr 1fr 1fr;
   margin-top: 0.5rem;
 }
 
-.emoji {
-
+.emoji:hover {
+  border: 1px solid blue;
+  padding-left: 0.3rem;
 }
 
 .emoji_with_counter {
-  background-color: lightgreen;
-  display: flex;
+  /* border: 1px solid black; */
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-top: 1rem;
+  padding-left: 3rem;
+  align-items: center;
+}
+
+.emoji_with_counter * {
+  text-align: right;
 }
