vote counter clickable & does incr count as expected.  Warned about mutating state directly though, haven't learned about that yet. will fix when I know what's up

--- a/src/App.css
+++ b/src/App.css
@@ -51,9 +51,12 @@
   margin-top: 0.5rem;
 }
 
+.emoji {
+  padding-left: 0.3rem;
+}
+
 .emoji:hover {
   border: 1px solid blue;
-  padding-left: 0.3rem;
 }
 
 .emoji_with_counter {
